--- a/habithub/habits/templates/habits/feedback.html
+++ b/habithub/habits/templates/habits/feedback.html
@@ -5,8 +5,7 @@
 <form action="" method="post" id="feedback-form">
     {% csrf_token %}
     <div class="form_error">{{ form.non_field_errors }}</div>
-    
-    <p><label class="form_label" for="{{ form.id_for_label }}">{{ form.label }}</label>{{ form }}</p>
+    <label class="form_label" for="{{ form.id_for_label }}">{{ form.label }}</label>{{ form }}
     <div class="form_error">{{ form.errors }}</div>
 
     <p><button type="submit">Отправить</button></p>
