--- a/habithub/habits/static/habits/css/styles.css
+++ b/habithub/habits/static/habits/css/styles.css
@@ -5,6 +5,7 @@ html, body {
     height: 100%;
     width: 100%;
     color: #444;
+    overflow: hidden;
 }
 header {
     display: flex;
@@ -76,6 +77,27 @@ header ul li:last-child {
     color: #333333; 
     text-decoration: underline;
 } 
+.burger-menu {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    cursor: pointer;
+    height: 50px;
+}
+.burger-menu span {
+    display: block;
+    width: 35px;
+    height: 4px;
+    background-color: white;
+    border-radius: 2px;
+    margin-left: 10px;
+}
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 .perfomance {
     font-size: 60px;
     font-style: italic;
@@ -230,7 +252,7 @@ button[type="submit"] {
     border: none;
     padding: 10px 20px;
     margin: auto;
-    font-size: 16px; 
+    font-size: 18px; 
     border-radius: 4px; 
     cursor: pointer; 
     transition: background-color 0.3s; 
@@ -312,6 +334,8 @@ footer {
     background-color: #DBDCF0;
     width: 100%;
     padding: 20px 0px;
+    position: fixed;
+    bottom: 0;
 }
 .footer_bottom {
     display: flex;
@@ -332,4 +356,119 @@ footer {
          url('/static/habits/fonts/Cormorant_Garamond/CormorantGaramond-Regular.woff') format("woff"),
          url('/static/habits/fonts/Cormorant_Garamond/CormorantGaramond-Regular.ttf') format("TrueType");
     font-style: normal;
+}
+@media (min-width: 360px) and (max-width: 574px) {
+    body {
+        overflow: auto;
+    }
+    header .logo img {
+        display: none;
+    }
+    header ul {
+        margin-top: 0;
+    }
+    ul {
+        margin-bottom: 0;
+    }
+    .header_second ul { 
+        display: none;
+    }
+    .header_second ul li {
+        font-size: 20px;
+    }
+    header ul li:first-child a {
+        font-size: 30px;
+        line-height: 55px;
+    }
+    header ul li:last-child {
+        font-size: 20px;
+        margin-right: 0px;
+    }
+    .burger-menu {
+        display: flex;
+    }
+    .menu-active .header_second ul { 
+        display: block; 
+        padding: 0;
+    }
+    .perfomance {
+        font-size: 20px;
+        margin: 15px;
+        line-height: 20px;
+        width: 80%;
+    }
+    .all_habits, .all_goals, .all_progress, .habit_chart {
+        max-width: 350px;
+    }
+    .all_habits h2, .all_goals h2, .all_progress h2,  .habit_chart h2 {
+        font-size: 1.7em;
+    }
+    h3 {
+        font-size: 1.3em;
+    }
+    .filter-buttons a {
+        font-size: 0.9em;
+    }
+    .habit_table, .goal_table, .progress_table {
+        font-size: 0.9em;
+    }
+    .habit_table td, .goal_table td, .progress_table td {
+        font-size: 0.9em;
+        padding: 3px;
+    }
+    .button_add_habit, .button_add_goal {
+        width: 100px;
+        font-size: 0.9em;
+    }
+    .habit_table th, .goal_table th, .progress_table th {
+        font-size: 0.9em;
+    }
+    .delete-icon img, .archive-icon img {
+        width: 25px;
+        height: 25px;
+    }
+    .btn {
+        font-size: 0.9em;
+        line-height: 1em;
+        padding: 3px;
+    }
+    h1 {
+        font-size: 1.8rem;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .form_label, label {
+        font-size: 1em;
+    }
+    input[type="text"], input[type="password"], input[type="email"], input[type="date"], input[type="datetime-local" i],  select, textarea {
+        padding: 5px 0 5px 0;
+        font-size: 0.8em;  
+    }
+    button[type="submit"] {
+        padding: 5px 10px;
+    }
+    .change_password a {
+        font-size: 1.1em;
+    }
+    footer {
+        padding: 10px 0px;
+        position: static;
+    }
+}  
+@media (min-width: 575px) and (max-width: 767px)  {
+    header .logo img {
+        width: 100px;
+    }
+    header ul li:first-child a {
+        font-size: 50px;
+        line-height: 60px;
+    }
+    header ul li:last-child {
+        font-size: 30px;
+        margin-right: 30px;
+    }
+    .header_second ul {
+        gap: 15px;
+        padding: 15px;
+    }
 }
