--- a/habithub/habits/templates/habits/index.html
+++ b/habithub/habits/templates/habits/index.html
@@ -2,16 +2,17 @@
 
 
 {% block content %} 
-{% if user.is_authenticated %}
-<div class="habit_chart">
-<h2>Привычки</h2>
-    {{ habit_chart|safe }}
+<div class="wrapper">
+    {% if user.is_authenticated %}
+    <div class="habit_chart">
+        <h2>Привычки</h2>
+            {{ habit_chart|safe }}
+    </div>
+    {% else %}
+        <div class="perfomance">
+            HabitHub - простое и интуитивное приложение для отслеживания привычек и достижения целей.
+        </div>
+    {% endif %}
 </div>
-{% else %}
-<div class="perfomance">
-    HabitHub - простое и интуитивное приложение для отслеживания привычек и достижения целей.
-</div>
-{% endif %}
-
 
 {% endblock %}
