--- a/habithub/habits/templates/habits/index.html
+++ b/habithub/habits/templates/habits/index.html
@@ -1,18 +1,22 @@
 {% extends 'habits/base.html' %}
-
+{% load static %}
 
 {% block content %} 
-<div class="wrapper">
     {% if user.is_authenticated %}
     <div class="habit_chart">
         <h2>Привычки</h2>
         <div id="chart">{{ habit_chart|safe }}</div>
     </div>
     {% else %}
+    <div class="wrapper">
         <div class="perfomance">
             HabitHub - простое и интуитивное приложение для отслеживания привычек и достижения целей.
         </div>
+        <div class="phone">
+            <img src="{% static 'habits/images/phone.png' %}" alt="phone">
+        </div>
+    </div>
     {% endif %}
-</div>
+
 
 {% endblock %}
