Added version on static files

--- a/habithub/habits/templates/habits/base.html
+++ b/habithub/habits/templates/habits/base.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/locale/ru.js"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'habits/css/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'habits/css/styles.css' %}?v=2.0">
 
 </head>
 <body>
